修复 com/mojang 原生库